examples/test/testpolicy14114.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14114
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key25: value13
      key39: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value20
          key0: value20
          key36: value31
      podSelector:
        matchLabels:
          key41: value12
          key31: value27
          key11: value1
